packages/jaeger-ui/src/components/App/Branding.css
/*
Copyright (c) 2026 Jaeger Authors
SPDX-License-Identifier: Apache-2.0
*/

.Branding {
  display: flex;
  align-items: center;
  height: 100%;
  flex-shrink: 0;
  min-width: fit-content;
  gap: 6px;
  padding-right: 12px;
}

.Branding--logo {
  height: 40px;
  width: auto;
  margin-top: 4px;
  flex-shrink: 0;
}

.Branding--name {
  font-size: 20px;
  font-weight: 500;
  margin-top: -4px;
  color: var(--text-inverse);
  line-height: 1.2;
  letter-spacing: -0.5px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  min-width: fit-content;
}

.Branding:hover .Branding--name {
  color: var(--text-inverse);
}

